adding new winner in the beginning and counting winners

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
 		<button class="tlacitko" onclick="tahnoutJmeno()">Vyvolej náhodnou studentku</button>
 
-
-
 		<h2>Předchozí oběti:</h2>
 
 		<div id="seznam">Seznam vyvolaných</div>
 
+		<h2>Počet vyvolaných</h2>
+
+		<div id="pocitadlo">0</div>
+
 	</div>
 
-
 	<script src="main.js"></script>
-
 </body>
 </html>
