adding reset function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
 
 	<div class="obsah">
-
 		<h1>Zkoušení u tabule</h1>
 
 		<div id="vyherka"></div>
@@ -25,8 +24,9 @@
 
 		<div id="pocitadlo">0</div>
 
+		<button class="reset" onclick="restartovatVyvolavac()">Začít nové kolo zkoušení</button>
 	</div>
 
-	<script src="main.js"></script>
+	<script src="vyvolavac.js"></script>
 </body>
 </html>
